Add SearchBox component in the CharactersFragment.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,23 +13,23 @@
         android:layout_height="0dp"
         app:defaultNavHost="true"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/bottomBar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:navGraph="@navigation/nav_graph" />
 
     <me.ibrahimsn.lib.SmoothBottomBar
         android:id="@+id/bottomBar"
-        app:backgroundColor="@color/black"
+        app:backgroundColor="@color/background_bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:textSize="14sp"
         app:textColor="#FDD835"
         app:iconSize="24dp"
-        app:indicatorColor="#2DFFFFFF"
+        app:indicatorColor="@color/grey_800"
         app:indicatorRadius="16dp"
         app:sideMargins="10dp"
         app:itemPadding="10dp"
-        app:iconTint="#C8FFFFFF"
-        app:iconTintActive="#FDD835"
+        app:iconTint="@color/white"
+        app:iconTintActive="@color/yellow_800"
         app:cornerRadius="16dp"
         app:menu="@menu/bottom_bar_menu"
         app:corners="top_left|top_right"
