--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -1,13 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_character_fragment"
     tools:context=".ui.characters.CharactersFragment">
 
 
-    <androidx.recyclerview.widget.RecyclerView
+    <ImageView
+        android:id="@+id/titleRickAndMortyImageView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:listitem=""/>
-</LinearLayout>
+        android:layout_height="100dp"
+        android:layout_marginHorizontal="10dp"
+        android:layout_marginTop="10dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/rick_morty"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/searchBarEditText"
+        android:layout_width="0dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:drawablePadding="5dp"
+        android:background="@drawable/search_box_background"
+        android:drawableStart="@drawable/search_icon"
+        android:hint="@string/search_character"
+        android:maxLines="1"
+        android:inputType="textFilter"
+        android:textColor="@color/search_text_color"
+        android:textColorHint="@color/not_focus_search_tint_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/titleRickAndMortyImageView" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
