Add filter group in the CharactersFragment.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,14 +22,14 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         app:textSize="14sp"
-        app:textColor="#FDD835"
+        app:textColor="@color/text_color_bottom_navigation"
         app:iconSize="24dp"
-        app:indicatorColor="@color/grey_800"
+        app:indicatorColor="@color/indicator_color_bottom_navigation"
         app:indicatorRadius="16dp"
         app:sideMargins="10dp"
         app:itemPadding="10dp"
-        app:iconTint="@color/white"
-        app:iconTintActive="@color/yellow_800"
+        app:iconTint="@color/icon_tint_bottom_navigation"
+        app:iconTintActive="@color/text_color_bottom_navigation"
         app:cornerRadius="16dp"
         app:menu="@menu/bottom_bar_menu"
         app:corners="top_left|top_right"
