--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,9 +3,16 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="background_bottom_navigation">#BA000000</color>
-    <color name="blue_800">#039BE5</color>
-    <color name="yellow_800">#FDD835</color>
-    <color name="grey_800">#626262</color>
+
+    <color name="icon_tint_bottom_navigation">#FFFFFFFF</color>
+    <color name="indicator_color_bottom_navigation">#626262</color>
+    <color name="text_color_bottom_navigation">#FDD835</color>
+
+    <color name="focus_search_box_background">#B0FDD835</color>
+    <color name="not_focus_search_box_background">#A3626262</color>
+
+    <color name="focus_search_box_stroke">#039BE5</color>
+    <color name="not_focus_search_box_stroke">#FFFFFFFF</color>
 
     <color name="not_focus_search_icon">#FFFFFFFF</color>
     <color name="focus_search_icon">#039BE5</color>
@@ -13,5 +20,8 @@
     <color name="not_focus_search_tint_text">#FFFFFFFF</color>
     <color name="focus_search_tint_text">#FF000000</color>
     <color name="search_text_color">#FF000000</color>
+
+    <color name="checked_radio_button_background">#B0FDD835</color>
+    <color name="not_checked_radio_button_background">#CE626262</color>
 
 </resources>
