--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -28,12 +28,13 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/search_box_background"
         android:drawableStart="@drawable/search_icon"
+        android:drawableTint="@drawable/edit_text_drawable_tint_color"
         android:drawablePadding="5dp"
         android:hint="@string/search_character"
         android:inputType="textFilter"
         android:maxLines="1"
         android:textColor="@color/search_text_color"
-        android:textColorHint="@color/not_focus_search_tint_text"
+        android:textColorHint="@drawable/edit_text_hint_color"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleRickAndMortyImageView" />
@@ -42,6 +43,7 @@
         android:id="@+id/filterRadioGroup"
         android:layout_width="match_parent"
         android:layout_height="40dp"
+        android:visibility="gone"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
