--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -4,16 +4,19 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint_layout"
     android:layout_width="180dp"
-    android:layout_height="240dp"
+    android:layout_height="wrap_content"
     android:layout_margin="10dp"
     android:background="@drawable/item_character_background">
 
     <TextView
         android:id="@+id/titleOfCharacter"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
         android:layout_marginTop="16dp"
         android:fontFamily="@font/get_schwifty"
+        android:gravity="center"
+        android:lines="1"
         android:textColor="@color/item_character_title"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -23,13 +26,13 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/characterImageCardView"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
         android:layout_marginTop="8dp"
-        app:cardCornerRadius="180dp"
+        app:cardCornerRadius="140dp"
+        app:layout_constraintBottom_toTopOf="@id/statusOfCharacter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/statusOfCharacter"
         app:layout_constraintTop_toBottomOf="@id/titleOfCharacter">
 
         <ImageView
@@ -43,27 +46,45 @@
 
     <TextView
         android:id="@+id/statusOfCharacter"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="10dp"
+        android:gravity="center"
+        android:lines="1"
         android:textColor="@color/item_character_title"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@id/lineView"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/characterImageCardView"
         tools:text="Dead" />
+
+    <View
+        android:id="@+id/lineView"
+        android:layout_width="2dp"
+        android:layout_height="0dp"
+        android:layout_marginVertical="6dp"
+        android:background="@color/item_character_background_shape"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/characterImageCardView" />
 
     <TextView
         android:id="@+id/speciesOfCharacter"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginHorizontal="8dp"
+        android:layout_marginVertical="10dp"
+        android:gravity="center"
+        android:lines="1"
         android:textColor="@color/item_character_title"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="@id/lineView"
+        app:layout_constraintTop_toBottomOf="@id/characterImageCardView"
         tools:text="Human" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
