--- a/app/src/main/res/layout/item_character.xml
+++ b/app/src/main/res/layout/item_character.xml
@@ -40,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
+            android:background="@android:color/transparent"
             tools:srcCompat="@tools:sample/avatars" />
 
     </androidx.cardview.widget.CardView>
