--- a/app/src/main/res/layout/fragment_characters.xml
+++ b/app/src/main/res/layout/fragment_characters.xml
@@ -27,8 +27,8 @@
         android:layout_marginEnd="16dp"
         android:background="@drawable/search_box_background"
         android:drawableStart="@drawable/search_icon"
-        android:drawableTint="@drawable/edit_text_drawable_tint_color"
         android:drawablePadding="5dp"
+        android:drawableTint="@drawable/edit_text_drawable_tint_color"
         android:hint="@string/search_character"
         android:inputType="textFilter"
         android:maxLines="1"
@@ -42,10 +42,10 @@
         android:id="@+id/filterRadioGroup"
         android:layout_width="match_parent"
         android:layout_height="40dp"
-        android:visibility="gone"
         android:layout_marginHorizontal="16dp"
         android:layout_marginTop="16dp"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:weightSum="4"
         app:layout_constraintTop_toBottomOf="@id/searchBarEditText">
 
@@ -109,6 +109,28 @@
             android:textStyle="bold" />
 
     </RadioGroup>
+
+    <com.facebook.shimmer.ShimmerFrameLayout
+        android:id="@+id/charactersContainerShimmer"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:visibility="gone"
+        android:layout_marginHorizontal="6dp"
+        android:layout_marginTop="6dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/filterRadioGroup">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <include layout="@layout/placeholde_item_character" />
+
+            <include layout="@layout/placeholde_item_character" />
+
+        </LinearLayout>
+    </com.facebook.shimmer.ShimmerFrameLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/charactersRecyclerView"
